lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ifilyaninitmo-ingress
spec:
  tls:
  - hosts:
      - sleepingjoshua.com
    secretName: ifilyaninitmo-secret
  rules:
  - host: sleepingjoshua.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ifilyaninitmo-replicaset
            port:
              number: 3000
